# Eurobot2019

./: .gitignore  .gitmodules  ros_uri.sh
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/include/eurobot2019_messages/: drop_command.h  drop_motors.h  drop_status.h  grabber_motors.h  pickup.h
install/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
install/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
install/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
install/include/urg_node/: Status.h
install/lib/pkgconfig/: eurobot2019_collision_avoidance_module.pc  eurobot2019_dropper.pc  eurobot2019_i2c_interface.pc  eurobot2019_messages.pc  eurobot2019_nav.pc  eurobot2019_path_planning_module.pc  eurobot2019_pickup.pc  eurobot2019_tactics_module.pc  eurobot2019_tf.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  urg_node.pc
install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/lib/urg_node/: getID  urg_node
install/share/eurobot2019_collision_avoidance_module/cmake/: eurobot2019_collision_avoidance_moduleConfig.cmake
install/share/eurobot2019_dropper/cmake/: eurobot2019_dropperConfig.cmake
install/share/eurobot2019_i2c_interface/: package.xml
install/share/eurobot2019_i2c_interface/cmake/: eurobot2019_i2c_interfaceConfig.cmake
install/share/eurobot2019_messages/cmake/: eurobot2019_messages-msg-extras.cmake  eurobot2019_messages-msg-paths.cmake  eurobot2019_messagesConfig.cmake
install/share/eurobot2019_nav/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  map_params.yaml  map_params_icrs.yaml  package.xml
install/share/eurobot2019_nav/cmake/: eurobot2019_navConfig.cmake
install/share/eurobot2019_path_planning_module/: package.xml
install/share/eurobot2019_path_planning_module/cmake/: eurobot2019_path_planning_moduleConfig.cmake
install/share/eurobot2019_pickup/cmake/: eurobot2019_pickupConfig.cmake
install/share/eurobot2019_tactics_module/cmake/: eurobot2019_tactics_moduleConfig.cmake
install/share/eurobot2019_tf/cmake/: eurobot2019_tfConfig.cmake
install/share/rosserial_arduino/cmake/: rosserial_arduinoConfig.cmake
install/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
install/share/urg_node/cmake/: urg_nodeConfig.cmake
mbed/grabber_vertical_control/: grabber_controller.cpp  grabber_controller.h  main.cpp  makefile
mbed/grabber_vertical_control/NUCLEO_F303K8/: grabber_controller.d  grabber_vertical_control.disasm  grabber_vertical_control.elf  grabber_vertical_control.hex  main.d
mbed/stepper_test/: AsyncStepper.cpp  AsyncStepper.hpp  main.cpp  makefile
mbed/stepper_test/LPC1768/: AsyncStepper.d  gcc4mbed.d  main.d  stepper_test.disasm  stepper_test.elf  stepper_test.hex
mbed/wheel_speed_control_test/: QEI.cpp  QEI.h  main.cpp  makefile  wheel_controller.cpp  wheel_controller.hpp
mbed/wheel_speed_control_test/NUCLEO_F303K8/: gcc4mbed.d  main.d  wheel_controller.d  wheel_speed_control_test.disasm  wheel_speed_control_test.elf  wheel_speed_control_test.hex
src/I2C_interface/: CMakeLists.txt  package.xml
src/I2C_interface/src/: I2C_interface_node.cpp  example.cpp
src/eurobot2019_2dnav/: CMakeLists.txt  package.xml
src/eurobot2019_collision_avoidance/: CMakeLists.txt  package.xml
src/eurobot2019_collision_avoidance/scripts/: collision_avoidance.py
src/eurobot2019_colour_detection/: CMakeLists.txt  colour_detection.cpp  package.xml
src/eurobot2019_colour_detection/launch/: colourdetection.launch
src/eurobot2019_drop_module/src/: tatic_listener.cpp
src/eurobot2019_dropper/: CMakeLists.txt  dropper_node.cpp  package.xml
src/eurobot2019_dropper/include/: state_manager.hpp
src/eurobot2019_dropper/launch/: dropper_node.launch
src/eurobot2019_dropper/src/: state_manager.cpp
src/eurobot2019_i2c_interface/: CMakeLists.txt  i2c_interface_node.cpp  package.xml
src/eurobot2019_i2c_interface/include/: i2c.hpp  i2c_interface_to_mbed.hpp  message_interface.hpp
src/eurobot2019_i2c_interface/launch/: i2c_interface_node.launch
src/eurobot2019_i2c_interface/scripts/: odom_hardware.py
src/eurobot2019_i2c_interface/src/: i2c.cpp  i2c_interface_to_mbed.cpp
src/eurobot2019_messages/: CMakeLists.txt  package.xml
src/eurobot2019_messages/msg/: drop_command.msg  drop_motors.msg  drop_status.msg  grabber_motors.msg  pickup.msg
src/eurobot2019_nav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  initial_state.yaml  local_costmap_params.yaml  package.xml
src/eurobot2019_nav/data/: eurobot2019.rviz
src/eurobot2019_nav/launch/: amcl.launch  move_base.launch  nav.launch
src/eurobot2019_path_planning_module/: CMakeLists.txt  package.xml
src/eurobot2019_path_planning_module/path_plan/: path_planning_node.cpp
src/eurobot2019_pickup/: CMakeLists.txt  package.xml  pickup_node.cpp
src/eurobot2019_pickup/include/: state_manager.hpp
src/eurobot2019_pickup/launch/: pickup_node.launch
src/eurobot2019_pickup/src/: state_manager.cpp
src/eurobot2019_puck_localisation/: CMakeLists.txt  package.xml  puck_localisation_node.cpp
src/eurobot2019_puck_localisation/camera/: camera_calibration.ini
src/eurobot2019_puck_localisation/launch/: puck_localisation.launch
src/eurobot2019_tactics_module/: CMakeLists.txt  package.xml  tactics_node.cpp
src/eurobot2019_tactics_module/launch/: tactics_node.launch  tactics_node_left.launch  tactics_node_right.launch
src/eurobot2019_tactics_module/scripts/: tactics_main.py
src/eurobot2019_tf/: CMakeLists.txt  package.xml
src/eurobot2019_tf/scripts/: broadcaster.py
(+48 files in other folders)
