<?xml version="1.0"?>
<package format="2">
  <name>I2C_interface</name>
  <version>0.1.0</version>
  <description>The I2C_interface package</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>


  <license>MIT</license>


  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
