<?xml version="1.0"?>
<package format="2">
  <name>eurobot2019_colour_detection</name>
  <version>0.0.0</version>
  <description>The eurobot2019_colour_detection package</description>

  <maintainer email="cheryl@todo.todo">cheryl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>opencv2</depend>
  <depend>roscpp</depend>
  <depend>usb_cam</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
