<?xml version="1.0"?>
<package format="2">
  <name>eurobot2019_tactics_module</name>
  <version>0.0.1</version>
  <description>The eurobot2019_tactics_module does the overarching decision making of the robot.</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <author email="nrh16@ic.ac.uk">Nick Hafner</author>


  <depend>roscpp</depend>
  <depend>eurobot2019_messages</depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
