<?xml version="1.0"?>
<package format="2">
  <name>eurobot2019_nav</name>
  <version>0.0.0</version>
  <description>The eurobot2019_nav package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nickick@todo.todo">nickick</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eurobot2019_tf</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>urg_node</build_depend>
  <build_export_depend>eurobot2019_tf</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <exec_depend>eurobot2019_tf</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <depend>amcl</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
